# i3lp

./: Cargo.toml  config.toml
src/: config.rs  error.rs  i3.rs  main.rs  ui.rs
